--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p id="categoryName" class="flex-center flex-column"></p>
           </a>
         </div>
-        <a class="btn" href="/game.html">Play</a>
+        <a class="btn" href="/CSDTrivia/game.html">Play</a>
         <div>
           <h3>
             <p>Today's top 5 scores:</p>
