--- a/end.html
+++ b/end.html
@@ -13,23 +13,24 @@
       <h1>Total Score</h1>
       <h1 id="finalScore"></h1>
       <div id="avatarList" class="flex-center circle-container "> 
-        <img src="/CSDTrivia/avatars/BS.jpg" alt="" class="circle" data-avatar-name="Brian">
-        <img src="/CSDTrivia/avatars/JG.jpg" alt="" class="circle" data-avatar-name="Joanne">
-        <img src="/CSDTrivia/avatars/BP.jpg" alt="" class="circle" data-avatar-name="Brendon">
-        <img src="/CSDTrivia/avatars/TL.jpg" alt="" class="circle" data-avatar-name="Tony">
-        <img src="/CSDTrivia/avatars/AG.jpg" alt="" class="circle" data-avatar-name="Angela">
-        <img src="/CSDTrivia/avatars/KG.jpg" alt="" class="circle" data-avatar-name="Kristen">
-        <img src="/CSDTrivia/avatars/AB.png" alt="" class="circle" data-avatar-name="Alison">
-        <img src="/CSDTrivia/avatars/JH.jpg" alt="" class="circle" data-avatar-name="Justin">
-        <img src="/CSDTrivia/avatars/ZD.jpg" alt="" class="circle" data-avatar-name="Zach">     
-        <img src="/CSDTrivia/avatars/DE.jpg" alt="" class="circle" data-avatar-name="Daniel">
-        <img src="/CSDTrivia/avatars/FG.png" alt="" class="circle" data-avatar-name="Francisco">
+        <img src="/Samafraig/avatars/BS.jpg" alt="" class="circle" data-avatar-name="Brian">
+        <img src="/Samafraig/avatars/JG.jpg" alt="" class="circle" data-avatar-name="Joanne">
+        <img src="/Samafraig/avatars/BP.jpg" alt="" class="circle" data-avatar-name="Brendon">
+        <img src="/Samafraig/avatars/TL.jpg" alt="" class="circle" data-avatar-name="Tony">
+        <img src="/Samafraig/avatars/AG.jpg" alt="" class="circle" data-avatar-name="Angela">
+        <img src="/Samafraig/avatars/KG.jpg" alt="" class="circle" data-avatar-name="Kristen">
+        <img src="/Samafraig/avatars/AB.png" alt="" class="circle" data-avatar-name="Alison">
+        <img src="/Samafraig/avatars/JH.jpg" alt="" class="circle" data-avatar-name="Justin">
+        <img src="/Samafraig/avatars/ZD.jpg" alt="" class="circle" data-avatar-name="Zach">     
+        <img src="/Samafraig/avatars/DE.jpg" alt="" class="circle" data-avatar-name="Daniel">
+        <img src="/Samafraig/avatars/FG.png" alt="" class="circle" data-avatar-name="Francisco">
       </div>
       <form id="saveScoreForm"> <button type="submit" class="btn" id="saveScoreBtn" disabled>Save</button>
       </form>
-      <a class="btn" href="/CSDTrivia">Go Home</a>
+      <a class="btn" href="/Samafraig">Go Home</a>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.0/luxon.min.js"></script>
   <script src="end.js"></script>
 </body>
 </html>
