--- a/end.html
+++ b/end.html
@@ -27,7 +27,7 @@
       </div>
       <form id="saveScoreForm"> <button type="submit" class="btn" id="saveScoreBtn" disabled>Save</button>
       </form>
-      <a class="btn" href="/Samafraig">Go Home</a>
+      <a class="btn" href="/CSDTrivia">Go Home</a>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.0/luxon.min.js"></script>
