--- a/end.html
+++ b/end.html
@@ -19,7 +19,7 @@
         <img src="/CSDTrivia/avatars/TL.jpg" alt="" class="circle" data-avatar-name="Tony">
         <img src="/CSDTrivia/avatars/AG.jpg" alt="" class="circle" data-avatar-name="Angela">
         <img src="/CSDTrivia/avatars/KG.jpg" alt="" class="circle" data-avatar-name="Kristen">
-        <img src="/CSDTrivia/avatars/AB.png" alt="" class="circle" data-avatar-name="Alison">
+        <img src="/CSDTrivia/avatars/AB.jpg" alt="" class="circle" data-avatar-name="Alison">
         <img src="/CSDTrivia/avatars/JH.jpg" alt="" class="circle" data-avatar-name="Justin">
         <img src="/CSDTrivia/avatars/ZD.jpg" alt="" class="circle" data-avatar-name="Zach">     
         <img src="/CSDTrivia/avatars/DE.jpg" alt="" class="circle" data-avatar-name="Daniel">
